Fix request bombardment
